Refactor type casting and generics usage in role resolution strategies, data store configurations, and route filtering across examples.